<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.carlosreads.talekeeper.views.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.carlosreads.talekeeper.views.DiscoverFragment"
        android:label="@string/discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.carlosreads.talekeeper.views.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>